file reorganisation, other players rendering on client

--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
     <link href="./styles/chat.css" rel="stylesheet" type="text/css">
 
     <!-- scripts -->    
-    <script type="module" src="src/client.js"></script>
-
-    <!-- world -->
-    <script type="module" src="src/game/terrain.js"></script>
-    <script type="module" src="src/game/world.js"></script>
-    <script type="module" src="src/game/minions.js"></script>
-
-    <!-- chat -->
-    <script type="module" src="src/chat.js"></script>  
+    <script type="module" src="src/game/main.js"></script>
 
     <!-- favicon bug -->
     <link rel="shortcut icon" href="#">
