--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./styles/chat.css" rel="stylesheet" type="text/css">
 
     <!-- scripts -->    
-    <script type="module" src="src/game/main.js"></script>
+    <script type="module" src="client/main.js"></script>
 
     <!-- favicon bug -->
     <link rel="shortcut icon" href="#">
