--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="./styles/chat.css" rel="stylesheet" type="text/css">
 
     <!-- scripts -->    
+    <script type="module" src="client/ui/react.js"></script>
     <script type="module" src="client/main.js"></script>
 
     <!-- favicon bug -->
@@ -20,7 +21,8 @@
 </head>
 
 <body>
-    <div id="threejs-canvas" tabindex="1"></div>
+    <div id="root"></div>
+    <div id="threejs-canvas" tabindex="1"></div>    
 
     <!-- chat part -->
     <div id="chat">
