react integration, draggable ui panel

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Pfuwu</title>
 
     <!-- styles -->
-    <link href="./styles/main.css" rel="stylesheet" type="text/css">
-    <link href="./styles/chat.css" rel="stylesheet" type="text/css">
+    <link href="client/styles/main.css" rel="stylesheet" type="text/css">
+    <link href="client/styles/chat.css" rel="stylesheet" type="text/css">
 
     <!-- scripts -->    
     <script type="module" src="client/ui/react.js"></script>
